# Copyright (C) 2015-2024 maClara, LLC <info@maclara-llc.com>
# This file is part of the JWT C Library
#
# SPDX-License-Identifier:  MPL-2.0
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at http://mozilla.org/MPL/2.0/.

EXTRA_DIST = 				\
	ec_key_invalid.pem		\
	ec_key_invalid_pub.pem		\
	ec_key_prime256v1.json		\
	ec_key_prime256v1.pem		\
	ec_key_prime256v1_pub.json	\
	ec_key_prime256v1_pub.pem	\
	ec_key_secp256k1.json		\
	ec_key_secp256k1.pem		\
	ec_key_secp256k1_pub.json	\
	ec_key_secp256k1_pub.pem	\
	ec_key_secp384r1.json		\
	ec_key_secp384r1.pem		\
	ec_key_secp384r1_pub.json	\
	ec_key_secp384r1_pub.pem	\
	ec_key_secp521r1.json		\
	ec_key_secp521r1.pem		\
	ec_key_secp521r1_pub.json	\
	ec_key_secp521r1_pub.pem	\
	eddsa_key_ed25519.json		\
	eddsa_key_ed25519.pem		\
	eddsa_key_ed25519_pub.json	\
	eddsa_key_ed25519_pub.pem	\
	jwks_keyring.json		\
	jwks_test-1.json		\
	jwks_test-2.json		\
	rsa_key_2048.json		\
	rsa_key_2048.pem		\
	rsa_key_2048_pub.json		\
	rsa_key_2048_pub.pem		\
	rsa_key_4096.json		\
	rsa_key_4096.pem		\
	rsa_key_4096_pub.json		\
	rsa_key_4096_pub.pem		\
	rsa_key_8192.json		\
	rsa_key_8192.pem		\
	rsa_key_8192_pub.json		\
	rsa_key_8192_pub.pem		\
	rsa_key_i37_pub.json		\
	rsa_key_i37_pub.pem		\
	rsa_key_invalid.pem		\
	rsa_key_invalid_pub.pem		\
	rsa_pss_key_2048.json		\
	rsa_pss_key_2048.pem		\
	rsa_pss_key_2048_pub.json	\
	rsa_pss_key_2048_pub.pem

SUBDIRS = jwks
